# trust-copilot-autopilot

./: .env.example  .gitignore  Makefile  README.md  backlog.html  index.html  pyproject.toml
apps/api/: deps.py  main.py
backlog/: INCREMENT-1-FOUNDATION.md  INCREMENT-2-DISCOVERY.md  INCREMENT-2-SIGNAL-ACQUISITION.md  INCREMENT-3-OUTREACH.md  INCREMENT-3-SIGNAL-FUSION.md  INCREMENT-4-PAIN-ICP-VALUE.md  INCREMENT-4-PROOF-PAYMENT.md  INCREMENT-5-BUYER-CONTACT.md  INCREMENT-5-SCALE.md  INCREMENT-6-MESSAGE-STRATEGY-AND-OUTREACH.md  INCREMENT-7-PROOF-PAYMENT.md  INCREMENT-8-LEARNING-EVAL.md  INCREMENT-9-SCALE-OPS.md  README.md
db/: session.py
db/models/: ops.py  (+10 more)
infra/: docker-compose.yml
services/: config.py  decision_trace.py  lanes.py  outbox.py  state_machine.py
tests/: conftest.py  test_account_memory.py  test_billing.py  test_buyer_psychology.py  test_buyer_resolver.py  test_competitor_detection.py  test_composer.py  test_config.py  test_conflict_detector.py  test_contact_decision.py  test_contact_plan.py  test_cta.py  test_deal_value.py  test_decay.py  test_dedupe.py  test_enums.py  test_event_store.py  test_events.py  test_explanation.py  test_extractor.py  test_fetcher.py  test_firmographics.py  test_fulfillment.py  test_fusion.py  test_guardrails.py  test_icp.py  test_inbox.py  test_intake_room.py  test_job_boards.py  test_labeling.py  test_lanes.py  test_mailbox.py  test_memory_index.py  test_message_strategy.py  test_model_rollback.py  test_narrative.py  test_negative_detector.py  test_objection.py  test_offer.py  test_offline_eval.py  (+27 more)
workers/: base.py
(+140 files in other folders)
